"""SQLAlchemy schema definitions for Alembic migrations.

This project uses sqlite3 directly at runtime (see `db/adapters/sqlite/*`), but Alembic
needs SQLAlchemy `MetaData` to support autogenerate and to serve as a schema
source-of-truth for migrations.

Important:
- Keep this schema aligned with what migrations produce at HEAD.
- The initial migration in this repo intentionally omits the
  `generated_feeds.run_id -> runs.run_id` foreign key; a later migration adds it.
"""

from __future__ import annotations

import sqlalchemy as sa

metadata = sa.MetaData()


# --- Core tables ---

app_users = sa.Table(
    "app_users",
    metadata,
    sa.Column("id", sa.Text(), primary_key=True),
    sa.Column("auth_provider_id", sa.Text(), nullable=False),
    sa.Column("email", sa.Text(), nullable=False),
    sa.Column("display_name", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("last_seen_at", sa.Text(), nullable=False),
)
sa.Index("idx_app_users_auth_provider_id", app_users.c.auth_provider_id, unique=True)

runs = sa.Table(
    "runs",
    metadata,
    sa.Column("run_id", sa.Text(), primary_key=True),
    sa.Column("app_user_id", sa.Text(), nullable=True),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("total_turns", sa.Integer(), nullable=False),
    sa.Column("total_agents", sa.Integer(), nullable=False),
    sa.Column(
        "feed_algorithm",
        sa.Text(),
        nullable=False,
        server_default=sa.text("'chronological'"),
    ),
    sa.Column("metric_keys", sa.Text(), nullable=True),
    sa.Column("started_at", sa.Text(), nullable=False),
    sa.Column("status", sa.Text(), nullable=False),
    sa.Column("completed_at", sa.Text(), nullable=True),
    sa.CheckConstraint("total_turns > 0", name="ck_runs_total_turns_gt_0"),
    sa.CheckConstraint("total_agents > 0", name="ck_runs_total_agents_gt_0"),
    sa.CheckConstraint(
        "status IN ('running', 'completed', 'failed')", name="ck_runs_status_valid"
    ),
    sa.CheckConstraint(
        "("
        "(status = 'completed' AND completed_at IS NOT NULL AND completed_at >= started_at)"
        " OR "
        "(status != 'completed' AND completed_at IS NULL)"
        ")",
        name="ck_runs_completed_at_consistent",
    ),
)

turn_metadata = sa.Table(
    "turn_metadata",
    metadata,
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("total_actions", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["run_id"], ["runs.run_id"], name="fk_turn_metadata_run_id"
    ),
    sa.CheckConstraint("turn_number >= 0", name="ck_turn_metadata_turn_number_gte_0"),
    sa.PrimaryKeyConstraint("run_id", "turn_number", name="pk_turn_metadata"),
)

turn_metrics = sa.Table(
    "turn_metrics",
    metadata,
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("metrics", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_turn_metrics_run_id"),
    sa.CheckConstraint("turn_number >= 0", name="ck_turn_metrics_turn_number_gte_0"),
    sa.PrimaryKeyConstraint("run_id", "turn_number", name="pk_turn_metrics"),
)

run_metrics = sa.Table(
    "run_metrics",
    metadata,
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("metrics", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_run_metrics_run_id"),
    sa.PrimaryKeyConstraint("run_id", name="pk_run_metrics"),
)

run_agents = sa.Table(
    "run_agents",
    metadata,
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("agent_id", sa.Text(), nullable=False),
    sa.Column("selection_order", sa.Integer(), nullable=False),
    sa.Column("handle_at_start", sa.Text(), nullable=False),
    sa.Column("display_name_at_start", sa.Text(), nullable=False),
    sa.Column("persona_bio_at_start", sa.Text(), nullable=False),
    sa.Column("followers_count_at_start", sa.Integer(), nullable=False),
    sa.Column("follows_count_at_start", sa.Integer(), nullable=False),
    sa.Column("posts_count_at_start", sa.Integer(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_run_agents_run_id"),
    sa.ForeignKeyConstraint(
        ["agent_id"], ["agent.agent_id"], name="fk_run_agents_agent_id"
    ),
    sa.PrimaryKeyConstraint("run_id", "agent_id", name="pk_run_agents"),
    sa.UniqueConstraint(
        "run_id",
        "selection_order",
        name="uq_run_agents_run_selection_order",
    ),
)

run_posts = sa.Table(
    "run_posts",
    metadata,
    sa.Column("run_post_id", sa.Text(), nullable=False),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("agent_post_id", sa.Text(), nullable=False),
    sa.Column("author_agent_id", sa.Text(), nullable=False),
    sa.Column("author_handle_at_start", sa.Text(), nullable=False),
    sa.Column("author_display_name_at_start", sa.Text(), nullable=False),
    sa.Column("body_text_at_start", sa.Text(), nullable=False),
    sa.Column("published_at_start", sa.Text(), nullable=False),
    sa.Column("source_post_id_at_start", sa.Text(), nullable=True),
    sa.Column("source_at_start", sa.Text(), nullable=True),
    sa.Column("source_uri_at_start", sa.Text(), nullable=True),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["run_id"],
        ["runs.run_id"],
        name="fk_run_posts_run_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "author_agent_id"],
        ["run_agents.run_id", "run_agents.agent_id"],
        name="fk_run_posts_run_author",
    ),
    sa.PrimaryKeyConstraint("run_post_id", name="pk_run_posts"),
    sa.UniqueConstraint(
        "run_id",
        "run_post_id",
        name="uq_run_posts_run_post",
    ),
    sa.UniqueConstraint(
        "run_id",
        "agent_post_id",
        name="uq_run_posts_run_agent_post",
    ),
    sa.CheckConstraint(
        "(source_at_start IS NULL AND source_post_id_at_start IS NULL) OR "
        "(source_at_start IS NOT NULL AND source_post_id_at_start IS NOT NULL)",
        name="chk_run_posts_provenance_pair",
    ),
)

run_post_likes = sa.Table(
    "run_post_likes",
    metadata,
    sa.Column("run_post_like_id", sa.Text(), nullable=False),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("run_post_id", sa.Text(), nullable=False),
    sa.Column("liker_agent_id", sa.Text(), nullable=False),
    sa.Column("liker_handle_at_start", sa.Text(), nullable=False),
    sa.Column("liker_display_name_at_start", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["run_id"],
        ["runs.run_id"],
        name="fk_run_post_likes_run_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_post_id"],
        ["run_posts.run_post_id"],
        name="fk_run_post_likes_run_post_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "liker_agent_id"],
        ["run_agents.run_id", "run_agents.agent_id"],
        name="fk_run_post_likes_run_liker",
    ),
    sa.PrimaryKeyConstraint("run_post_like_id", name="pk_run_post_likes"),
    sa.UniqueConstraint(
        "run_id",
        "liker_agent_id",
        "run_post_id",
        name="uq_run_post_likes_run_liker_post",
    ),
)

run_post_comments = sa.Table(
    "run_post_comments",
    metadata,
    sa.Column("run_post_comment_id", sa.Text(), nullable=False),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("run_post_id", sa.Text(), nullable=False),
    sa.Column("author_agent_id", sa.Text(), nullable=False),
    sa.Column("author_handle_at_start", sa.Text(), nullable=False),
    sa.Column("author_display_name_at_start", sa.Text(), nullable=False),
    sa.Column("body_text_at_start", sa.Text(), nullable=False),
    sa.Column("published_at_start", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["run_id"],
        ["runs.run_id"],
        name="fk_run_post_comments_run_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_post_id"],
        ["run_posts.run_post_id"],
        name="fk_run_post_comments_run_post_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "run_post_id"],
        ["run_posts.run_id", "run_posts.run_post_id"],
        name="fk_run_post_comments_run_post",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "author_agent_id"],
        ["run_agents.run_id", "run_agents.agent_id"],
        name="fk_run_post_comments_run_author",
    ),
    sa.PrimaryKeyConstraint("run_post_comment_id", name="pk_run_post_comments"),
)

run_follow_edges = sa.Table(
    "run_follow_edges",
    metadata,
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("follower_agent_id", sa.Text(), nullable=False),
    sa.Column("target_agent_id", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["run_id"],
        ["runs.run_id"],
        name="fk_run_follow_edges_run_id",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "follower_agent_id"],
        ["run_agents.run_id", "run_agents.agent_id"],
        name="fk_run_follow_edges_follower_run_agent",
    ),
    sa.ForeignKeyConstraint(
        ["run_id", "target_agent_id"],
        ["run_agents.run_id", "run_agents.agent_id"],
        name="fk_run_follow_edges_target_run_agent",
    ),
    sa.CheckConstraint(
        "follower_agent_id != target_agent_id",
        name="ck_run_follow_edges_no_self_follow",
    ),
    sa.PrimaryKeyConstraint(
        "run_id",
        "follower_agent_id",
        "target_agent_id",
        name="pk_run_follow_edges",
    ),
)

generated_feeds = sa.Table(
    "generated_feeds",
    metadata,
    sa.Column("feed_id", sa.Text(), nullable=False),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("agent_handle", sa.Text(), nullable=False),
    sa.Column("post_ids", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    # NOTE: This FK is applied by the second Alembic migration.
    sa.ForeignKeyConstraint(
        ["run_id"],
        ["runs.run_id"],
        name="fk_generated_feeds_run_id",
    ),
    sa.PrimaryKeyConstraint(
        "agent_handle", "run_id", "turn_number", name="pk_generated_feeds"
    ),
)


# --- Data ingest / enrichment tables ---

bluesky_profiles = sa.Table(
    "bluesky_profiles",
    metadata,
    sa.Column("handle", sa.Text(), primary_key=True),
    sa.Column("did", sa.Text(), nullable=False),
    sa.Column("display_name", sa.Text(), nullable=False),
    sa.Column("bio", sa.Text(), nullable=False),
    sa.Column("followers_count", sa.Integer(), nullable=False),
    sa.Column("follows_count", sa.Integer(), nullable=False),
    sa.Column("posts_count", sa.Integer(), nullable=False),
)

feed_posts = sa.Table(
    "feed_posts",
    metadata,
    sa.Column("post_id", sa.Text(), primary_key=True),
    sa.Column("source", sa.Text(), nullable=False),
    sa.Column("uri", sa.Text(), nullable=False),
    sa.Column("author_display_name", sa.Text(), nullable=False),
    sa.Column("author_handle", sa.Text(), nullable=False),
    sa.Column("text", sa.Text(), nullable=False),
    sa.Column("bookmark_count", sa.Integer(), nullable=False),
    sa.Column("like_count", sa.Integer(), nullable=False),
    sa.Column("quote_count", sa.Integer(), nullable=False),
    sa.Column("reply_count", sa.Integer(), nullable=False),
    sa.Column("repost_count", sa.Integer(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
)

agent_bios = sa.Table(
    "agent_bios",
    metadata,
    sa.Column("handle", sa.Text(), primary_key=True),
    sa.Column("generated_bio", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
)

agent = sa.Table(
    "agent",
    metadata,
    sa.Column("agent_id", sa.Text(), primary_key=True),
    sa.Column("handle", sa.Text(), nullable=False),
    sa.Column("persona_source", sa.Text(), nullable=False),
    sa.Column("display_name", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("updated_at", sa.Text(), nullable=False),
    sa.UniqueConstraint("handle", name="uq_agent_handle"),
)

agent_persona_bios = sa.Table(
    "agent_persona_bios",
    metadata,
    sa.Column("id", sa.Text(), primary_key=True),
    sa.Column("agent_id", sa.Text(), nullable=False),
    sa.Column("persona_bio", sa.Text(), nullable=False),
    sa.Column("persona_bio_source", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("updated_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["agent_id"], ["agent.agent_id"], name="fk_agent_persona_bios_agent_id"
    ),
)

user_agent_profile_metadata = sa.Table(
    "user_agent_profile_metadata",
    metadata,
    sa.Column("id", sa.Text(), primary_key=True),
    sa.Column("agent_id", sa.Text(), nullable=False),
    sa.Column("followers_count", sa.Integer(), nullable=False),
    sa.Column("follows_count", sa.Integer(), nullable=False),
    sa.Column("posts_count", sa.Integer(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("updated_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["agent_id"],
        ["agent.agent_id"],
        name="fk_user_agent_profile_metadata_agent_id",
    ),
    sa.UniqueConstraint("agent_id", name="uq_user_agent_profile_metadata_agent_id"),
)

agent_follow_edges = sa.Table(
    "agent_follow_edges",
    metadata,
    sa.Column("agent_follow_edge_id", sa.Text(), primary_key=True),
    sa.Column("follower_agent_id", sa.Text(), nullable=False),
    sa.Column("target_agent_id", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["follower_agent_id"],
        ["agent.agent_id"],
        name="fk_agent_follow_edges_follower_agent_id",
    ),
    sa.ForeignKeyConstraint(
        ["target_agent_id"],
        ["agent.agent_id"],
        name="fk_agent_follow_edges_target_agent_id",
    ),
    sa.UniqueConstraint(
        "follower_agent_id",
        "target_agent_id",
        name="uq_agent_follow_edges_follower_target",
    ),
    sa.CheckConstraint(
        "follower_agent_id != target_agent_id",
        name="ck_agent_follow_edges_no_self_follow",
    ),
)

agent_posts = sa.Table(
    "agent_posts",
    metadata,
    sa.Column("agent_post_id", sa.Text(), primary_key=True),
    sa.Column("agent_id", sa.Text(), nullable=False),
    sa.Column("body_text", sa.Text(), nullable=False),
    sa.Column("published_at", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("updated_at", sa.Text(), nullable=False),
    # Import provenance from canonical feed_posts and other upstream sources.
    sa.Column("source_post_id", sa.Text(), nullable=True),
    sa.Column("source", sa.Text(), nullable=True),
    sa.Column("source_uri", sa.Text(), nullable=True),
    sa.Column("imported_author_handle", sa.Text(), nullable=True),
    sa.Column("imported_author_display_name", sa.Text(), nullable=True),
    sa.Column("import_metadata_json", sa.Text(), nullable=True),
    sa.CheckConstraint(
        "(source IS NULL AND source_post_id IS NULL) OR "
        "(source IS NOT NULL AND source_post_id IS NOT NULL)",
        name="ck_agent_posts_source_pair",
    ),
    sa.ForeignKeyConstraint(
        ["agent_id"],
        ["agent.agent_id"],
        name="fk_agent_posts_agent_id",
    ),
    # Idempotent import key for backfills from canonical catalogs (e.g. feed_posts).
    # SQLite UNIQUE allows multiple rows when any constrained column is NULL, which
    # matches the desired "only enforce for imported rows" behavior.
    sa.UniqueConstraint(
        "source",
        "source_post_id",
        name="uq_agent_posts_source_source_post_id",
    ),
)

agent_post_likes = sa.Table(
    "agent_post_likes",
    metadata,
    sa.Column("agent_post_like_id", sa.Text(), nullable=False),
    sa.Column("agent_post_id", sa.Text(), nullable=False),
    sa.Column("liker_agent_id", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["agent_post_id"],
        ["agent_posts.agent_post_id"],
        name="fk_agent_post_likes_agent_post_id",
    ),
    sa.ForeignKeyConstraint(
        ["liker_agent_id"],
        ["agent.agent_id"],
        name="fk_agent_post_likes_liker_agent_id",
    ),
    sa.PrimaryKeyConstraint("agent_post_like_id", name="pk_agent_post_likes"),
    sa.UniqueConstraint(
        "liker_agent_id",
        "agent_post_id",
        name="uq_agent_post_likes_liker_agent_post",
    ),
)

agent_post_comments = sa.Table(
    "agent_post_comments",
    metadata,
    sa.Column("agent_post_comment_id", sa.Text(), nullable=False),
    sa.Column("agent_post_id", sa.Text(), nullable=False),
    sa.Column("author_agent_id", sa.Text(), nullable=False),
    sa.Column("body_text", sa.Text(), nullable=False),
    sa.Column("published_at", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("updated_at", sa.Text(), nullable=False),
    sa.ForeignKeyConstraint(
        ["agent_post_id"],
        ["agent_posts.agent_post_id"],
        name="fk_agent_post_comments_agent_post_id",
    ),
    sa.ForeignKeyConstraint(
        ["author_agent_id"],
        ["agent.agent_id"],
        name="fk_agent_post_comments_author_agent_id",
    ),
    sa.PrimaryKeyConstraint("agent_post_comment_id", name="pk_agent_post_comments"),
)


# --- Run-scoped action tables (likes, comments, follows) ---

likes = sa.Table(
    "likes",
    metadata,
    sa.Column("like_id", sa.Text(), primary_key=True),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("agent_handle", sa.Text(), nullable=False),
    sa.Column("post_id", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("explanation", sa.Text(), nullable=True),
    sa.Column("model_used", sa.Text(), nullable=True),
    sa.Column("generation_metadata_json", sa.Text(), nullable=True),
    sa.Column("generation_created_at", sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_likes_run_id"),
    sa.CheckConstraint("turn_number >= 0", name="ck_likes_turn_number_gte_0"),
    # Within a single run+turn, an agent can like a given post at most once.
    # The domain validator tries to prevent duplicates, but this is the persistence
    # backstop that guarantees we never store duplicate likes for the same target.
    sa.UniqueConstraint(
        "run_id",
        "turn_number",
        "agent_handle",
        "post_id",
        name="uq_likes_run_turn_agent_post",
    ),
)

comments = sa.Table(
    "comments",
    metadata,
    sa.Column("comment_id", sa.Text(), primary_key=True),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("agent_handle", sa.Text(), nullable=False),
    sa.Column("post_id", sa.Text(), nullable=False),
    sa.Column("text", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("explanation", sa.Text(), nullable=True),
    sa.Column("model_used", sa.Text(), nullable=True),
    sa.Column("generation_metadata_json", sa.Text(), nullable=True),
    sa.Column("generation_created_at", sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_comments_run_id"),
    sa.CheckConstraint("turn_number >= 0", name="ck_comments_turn_number_gte_0"),
    # Within a single run+turn, an agent can comment on a given post at most once.
    # This matches the current action rules validator (duplicates rejected) and ensures the
    # DB cannot accumulate duplicate per-target comments for the same turn.
    sa.UniqueConstraint(
        "run_id",
        "turn_number",
        "agent_handle",
        "post_id",
        name="uq_comments_run_turn_agent_post",
    ),
)

follows = sa.Table(
    "follows",
    metadata,
    sa.Column("follow_id", sa.Text(), primary_key=True),
    sa.Column("run_id", sa.Text(), nullable=False),
    sa.Column("turn_number", sa.Integer(), nullable=False),
    sa.Column("agent_handle", sa.Text(), nullable=False),
    sa.Column("user_id", sa.Text(), nullable=False),
    sa.Column("created_at", sa.Text(), nullable=False),
    sa.Column("explanation", sa.Text(), nullable=True),
    sa.Column("model_used", sa.Text(), nullable=True),
    sa.Column("generation_metadata_json", sa.Text(), nullable=True),
    sa.Column("generation_created_at", sa.Text(), nullable=True),
    sa.ForeignKeyConstraint(["run_id"], ["runs.run_id"], name="fk_follows_run_id"),
    sa.CheckConstraint("turn_number >= 0", name="ck_follows_turn_number_gte_0"),
    # Within a single run+turn, an agent can follow a given user at most once.
    # This prevents duplicate follow actions for the same target and keeps persistence aligned with
    # the validator/history checks that treat "followed" as a boolean relationship.
    sa.UniqueConstraint(
        "run_id",
        "turn_number",
        "agent_handle",
        "user_id",
        name="uq_follows_run_turn_agent_user",
    ),
)


# --- Indexes (match current SQLite schema) ---

sa.Index("idx_runs_status", runs.c.status)
sa.Index("idx_runs_created_at", runs.c.created_at.desc())
sa.Index("idx_runs_app_user_id", runs.c.app_user_id)
sa.Index("idx_feed_posts_author_handle", feed_posts.c.author_handle)
sa.Index("idx_turn_metadata_run_id", turn_metadata.c.run_id)
sa.Index("idx_turn_metrics_run_id", turn_metrics.c.run_id)
sa.Index("idx_run_agents_run_id", run_agents.c.run_id)
sa.Index(
    "idx_run_posts_run_author_published",
    run_posts.c.run_id,
    run_posts.c.author_agent_id,
    run_posts.c.published_at_start,
)
sa.Index("idx_run_posts_run_id", run_posts.c.run_id)
sa.Index(
    "idx_run_post_likes_run_post",
    run_post_likes.c.run_id,
    run_post_likes.c.run_post_id,
)
sa.Index(
    "idx_run_post_likes_run_liker",
    run_post_likes.c.run_id,
    run_post_likes.c.liker_agent_id,
)
sa.Index(
    "idx_run_post_comments_run_post_published",
    run_post_comments.c.run_id,
    run_post_comments.c.run_post_id,
    run_post_comments.c.published_at_start,
)
sa.Index(
    "idx_run_post_comments_run_author_published",
    run_post_comments.c.run_id,
    run_post_comments.c.author_agent_id,
    run_post_comments.c.published_at_start,
)
sa.Index("idx_run_follow_edges_run_id", run_follow_edges.c.run_id)
sa.Index(
    "idx_run_follow_edges_run_follower",
    run_follow_edges.c.run_id,
    run_follow_edges.c.follower_agent_id,
)
sa.Index(
    "idx_run_follow_edges_run_target",
    run_follow_edges.c.run_id,
    run_follow_edges.c.target_agent_id,
)
sa.Index(
    "idx_agent_persona_bios_agent_id_created_at",
    agent_persona_bios.c.agent_id,
    agent_persona_bios.c.created_at.desc(),
)
sa.Index(
    "idx_agent_follow_edges_follower_agent_id",
    agent_follow_edges.c.follower_agent_id,
)
sa.Index(
    "idx_agent_follow_edges_target_agent_id",
    agent_follow_edges.c.target_agent_id,
)
sa.Index(
    "idx_agent_posts_agent_id_published_at",
    agent_posts.c.agent_id,
    agent_posts.c.published_at,
)
sa.Index("idx_agent_post_likes_post_id", agent_post_likes.c.agent_post_id)
sa.Index(
    "idx_agent_post_comments_post_published",
    agent_post_comments.c.agent_post_id,
    agent_post_comments.c.published_at,
)
sa.Index(
    "idx_agent_post_comments_author_published",
    agent_post_comments.c.author_agent_id,
    agent_post_comments.c.published_at,
)
sa.Index(
    "idx_likes_run_turn_agent",
    likes.c.run_id,
    likes.c.turn_number,
    likes.c.agent_handle,
)
sa.Index(
    "idx_comments_run_turn_agent",
    comments.c.run_id,
    comments.c.turn_number,
    comments.c.agent_handle,
)
sa.Index(
    "idx_follows_run_turn_agent",
    follows.c.run_id,
    follows.c.turn_number,
    follows.c.agent_handle,
)
